# kwix

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
kwix/: __init__.py  app.py  conf.py  impl.py  l10n.py  plugin.py  server.py  stor.py  util.py
kwix/action/: __init__.py  add_action.py  base64.py  base64decode.py  base64encode.py  edit_action.py  machinist.py  quit.py
kwix/logic/: __init__.py
kwix/plugin/: __init__.py
kwix/ui/: __init__.py  tk.py  tray.py
kwix/ui/builder/: tk.py
